# evolution

./: Cargo.toml  PLAN.md
crates/evo-cli/: Cargo.toml
crates/evo-cli/src/: main.rs
crates/evo-core/: Cargo.toml
crates/evo-core/src/: lib.rs  stats.rs  traits.rs  world.rs
crates/evo-gui/: Cargo.toml
crates/evo-gui/src/: main.rs
crates/evo-models/: Cargo.toml
crates/evo-models/benches/: onemax.rs
crates/evo-models/src/: bitstring.rs  lib.rs
crates/evo-models/src/neural/: brain.rs  creature.rs  grid.rs  mod.rs  reproducer.rs
