[package]
name = "evo-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
evo-core = { workspace = true }
evo-models = { workspace = true }
eframe = { workspace = true }
egui_plot = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
